v41 2021-06-15

	* catch2 adapter works with CATCH_CONFIG_PREFIX_ALL.
	  thanks Christian Morales Vega

	* Silenced -Wreserved-identifier from Clang "latest" (13.0.0).

	* Silenced (again) the MSVC C4702 warning from the default_return<>()
	  function template.

	* Introduced type trompeloeil::printer<T> as a customization point or
	  formatting data to strings in reports. This has the advantage of
	  allowing partial specializations. The old technique of specializing
	  the function template trompeloeil::print(ostream&, const T&) still
	  works.

v40 2021-03-14

	* Silenced -Wnonnull warning from GCC 9 and newer. Thank you Tony Neubert.

	* Fixed custom reported documentation bug. Thanks Matt Godbolt.

	* Added CMake alias target trompeloeil::trompeloeil.
	  Thank you Leon De Andrade.

	* Documentation markdown fixes. Thank you offa.

	* Moved all CI builds to github actions. travis-ci and appveyor
	  are no longer used.

	* Moved CI coverage collection to codecov.io

	* Conan recipe is now on https://conan.io/center/trompeloeil
	  the old rollbear/stable channel is defunct. Thank you Florian Berchtold.

v39 2020-10-31

	* Fix issue 204: ALLOW_CALL was not respected in sequences.
	  Now ALLOW_CALL in sequence may be skipped, but making a
	  call out of sequence is a violation. NOTE! This fix is likely
	  to break some existing test code!

	* Fix issue 211: #include <QtCore/QChar> before #include <trompeloeil.hpp>
	  caused compilation failure for all expectations.

	* Fix minor spelling errors and markdownlint warnings.

	* Issue 207: Extend cmake script to allow use of libc++ with g++

	* Fix issue 129: Wildcard _ does not match pass-by-value tuple
	  of only one type.

	* Fix issue 197: Add override to virtual destructors
	  to avoid -Wsuggest-destructor-override warnings.

v38 2020-06-08

	* Fixed bug where ALLOW_CALL only worked with sequences
	  if called at least once

	* Fixed bug to support IMPLEMENT_MOCKx and IMPLEMENT_CONST_MOCKx
	  constexpr
